Upgraded to Angular2 version 2.1.1

--- a/test/test.component.html
+++ b/test/test.component.html
@@ -1,4 +1,14 @@
+<h2> Display Tool Tip Message</h2>
+
 <input tooltip placeholder="hover to view tooltip" content="Hovered Tool tip"/>
 
 <br>
 <br>
+
+
+<h2> Display Tool Tip HTML Message</h2>
+
+<input tooltip placeholder="hover to view tooltip" content="<span style='color:red'>Hovered Tool tip</span>"/>
+
+
+<h2 tooltip content="Hovered Tool tip"> Hover here to view tooltip</h2>
