Added support for toggling showing tooltip on hover or on click

--- a/test/test.component.html
+++ b/test/test.component.html
@@ -12,3 +12,5 @@
 
 
 <h2 tooltip content="Hovered Tool tip"> Hover here to view tooltip</h2>
+
+<h2 tooltip content="Content Clicked" showOnClick="true"> Click here to view tooltip</h2>
